# Monitoring-DNS-Communication

./: AAAA_test.pcap  A_test.pcap  CMakeLists.txt  MX_test.pcap  NS_test.pcap  README.md  SOA2_test.pcap  SOA_test.pcap  SRV_test.pcap  check.pcap  dns-monitor  dnsStructures.h  dns_ns.pcap  filesOperations.cpp  filesOperations.h  gg.pcap  helpFunctions.cpp  helpFunctions.h  hh.pcap  main.cpp  makefile  ok.pcap  parseFunctions.cpp  parseFunctions.h  printFunctions.cpp  printFunctions.h  processPacket.cpp  processPacket.h  test.pcap  test.txt  translations.txt
